Fixed nav item alignment

--- a/Forum3/wwwroot/css/StandardClasses.css
+++ b/Forum3/wwwroot/css/StandardClasses.css
@@ -377,7 +377,6 @@ a.borderless * {
 	padding: 5px 10px;
 	position: absolute;
 	overflow-y: auto;
-	right: 0;
 	border: 1px solid #253248;
 	box-shadow: #121822 0 3px 8px;
 	z-index: 999;
